[package]
name = "rs-workspace"
version = "0.1.0"
authors = ["Pankaj Kumar <pankajkumaryadav1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "*"
num = "*"
atomic_float = "*"

[dependencies.rand]
version = "*"
features = ["small_rng"]

[[bin]]
name = "c4"
path = "src/c4.rs"