[package]
name = "rs-workspace"
version = "0.1.0"
authors = ["Pankaj Kumar <pankajkumaryadav1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "*"
num = "*"
atomic_float = "*"
rand_distr = "*"
parking_lot = "*"
text_io = "*"
crossbeam = "*"
dashmap = "*"
colored = "*"

[dependencies.rand]
version = "*"
features = ["small_rng"]

[[bin]]
name = "c4"
path = "src/c4.rs"

[[bin]]
name = "hex"
path = "src/hex.rs"